--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -558,7 +558,7 @@ and (max-width: 699px) {
     }
     
     .lokasjon{
-        margin-top: ;
+        margin-top: 0;
         text-align: center;
     }
     
