--- a/Side4/CSS/fil.css
+++ b/Side4/CSS/fil.css
@@ -2,7 +2,7 @@
 body {
   height: 100%;
   margin: 0;
-  background-image: linear-gradient(red, green, blue, white);
+  background-image: linear-gradient(rgb(194, 225, 255), rgb(255, 244, 182));
 }
 
 
@@ -108,6 +108,7 @@ h2{
   line-height: 1.7em;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 15px;
+  overflow: scroll;
 }
 
 .grid2{
@@ -129,6 +130,7 @@ h2{
   line-height: 1.7em;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 15px;
+  overflow: scroll;
 }
 
 
@@ -339,7 +341,7 @@ footer{
   .grid4{
   grid-column-start: 1;
   grid-column-end: 3;
-  grid-row-start: 3;
+  grid-row-start: 4;
   grid-row-end: 4;
   align-items: center;
   
