--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -35,7 +35,7 @@ and (min-width: 1099px)  {
 .navbar {
     width: 100%;
     line-height: 100px;
-    background-color: #c0392b;
+    background-color:#c0392b;
     text-align: center;
     display: inline-block;
     align-items: center;
@@ -123,8 +123,8 @@ li {
     padding: 50px;
     color: black;
     text-align: center;
-    background-color:  rgb(118, 142, 87);
-    background-image: linear-gradient(90deg,  rgb(118, 142, 87),rgb(198, 214, 177) );
+    background-color: rgb(191, 172, 149);
+    background-image: linear-gradient(90deg, rgb(191, 172, 149) , rgb(230, 215, 198) );
     border-radius: 4px;
 }
 
@@ -142,27 +142,15 @@ li {
 }
 
 
-.booking input{
+.booking input, .booking select{
     width: 250px;
     height: 30px;
     display: inline-block;
     margin-bottom: 30px;
     border-radius: 4px;
     border: none;
-    background-color:rgb(198, 214, 177);
+    background-color: rgb(238, 226, 212)
 }
-
-
-.booking select{
-    width: 250px;
-    height: 30px;
-    display: inline-block;
-    margin-bottom: 30px;
-    border-radius: 4px;
-    border: none;
-    background-color:rgb(198, 214, 177);
-}
-
 
 footer {
     margin-top: 300px;
@@ -355,8 +343,8 @@ and (max-width: 1100px) {
         padding: 50px;
         color: black;
         text-align: center;
-        background-color:  rgb(118, 142, 87);
-        background-image: linear-gradient(90deg,  rgb(118, 142, 87),rgb(198, 214, 177) );
+        background-color: rgb(191, 172, 149);
+        background-image: linear-gradient(90deg, rgb(191, 172, 149) , rgb(230, 215, 198) );
         border-radius: 4px;
         
     }
@@ -462,7 +450,7 @@ and (max-width: 1100px) {
 /*Liten Skjerm---------------------------------------------------------------------------------------------------*/
 
 @media screen 
-and (max-width: 699px) {
+and (max-width: 700px) {
 
     .Header-Image {
         background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
@@ -481,7 +469,7 @@ and (max-width: 699px) {
         text-shadow: 5px 5px 10px black;
         letter-spacing: 3px;
         color:#c0392b;
-        font-size: 46px;
+        font-size: 30px;
         top: 20%;
     }
     
@@ -558,7 +546,7 @@ and (max-width: 699px) {
     }
     
     .lokasjon{
-        margin-top: ;
+        margin-top: 0;
         text-align: center;
     }
     
@@ -579,8 +567,8 @@ and (max-width: 699px) {
         padding: 50px;
         color: black;
         text-align: center;
-        background-color:  rgb(118, 142, 87);
-        background-image: linear-gradient(90deg,  rgb(118, 142, 87),rgb(198, 214, 177) );
+        background-color: rgb(191, 172, 149);
+        background-image: linear-gradient(90deg, rgb(191, 172, 149) , rgb(230, 215, 198) );
         border-radius: 4px;
         
     }
