--- a/Side1/CSS/fil.css
+++ b/Side1/CSS/fil.css
@@ -60,6 +60,9 @@
     border-radius: 20px;
     border-style: solid;
   }
+
+
+  /*Main*/
   
   h2{
     text-decoration: underline;
@@ -136,7 +139,7 @@
     border-color: #c0392b;
   }
   
-  .test3,.test4,.test5 {
+  .bryllup,.fest,.konfirmasjon{
     height: 175px;
     width: 175px;
     border-style: solid;
@@ -190,8 +193,6 @@
     text-align: justify; 
   }
   
-  
-  
   .Fest {
     display: grid;
     grid-template-columns: 500px 250px;
@@ -240,7 +241,10 @@
     font-size: 28px;
     color: azure;
   }
+
   
+  /*footer*/
+
   footer {
     margin-top: 200px;
     background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
@@ -300,8 +304,6 @@
   color: beige;
   }
   
-  
-  
   #adresse-kart{
     height: 200px;
     margin-top: 30px;  
@@ -312,6 +314,7 @@
     zoom: 1.2;
   }
 }
+
 
 /*Medium skjerm------------------------------------------------------------ */
 
@@ -440,7 +443,7 @@
     border-color: #c0392b;
   }
   
-  .test3,.test5 {
+  .bryllup,.konfirmasjon {
     height: 175px;
     width: 175px;
     border-style: solid;
@@ -449,7 +452,7 @@
     border-radius: 130px;
   }
 
-  .test4{
+  .fest{
     margin-right: 10px;  
     border-style: solid;
     height: 175px;
@@ -603,7 +606,6 @@
     zoom: 1.2;
   }
   
-  
   .kart{
     height: 90%;
     color: beige;
@@ -751,7 +753,7 @@
     border-color: #c0392b;
   }
   
-  .test3,.test5 {
+  .bryllup,.konfirmasjon {
     height: 100px;
     width: 100px;
     border-style: solid;
@@ -760,7 +762,7 @@
     border-radius: 130px;
   }
 
-  .test3:hover, .test4:hover .test5:hover{
+  .bryllup:hover, .fest:hover .konfirmasjon:hover{
     border-style: solid;
     border-width: 1px;
     zoom: 1.7;
@@ -768,7 +770,8 @@
     width: 200%;
     z-index: 4;
   }
-  .test4{
+
+  .fest{
     margin-right: 10px;  
     border-style: solid;
     height: 100px;
@@ -776,7 +779,6 @@
     border-width: 3px;
     border-radius: 130px;
   }
-
 
   .Booking-utvalg {
     width: 90%;
@@ -916,7 +918,7 @@
     font-size: 18px;
     text-decoration: underline;
   }
-
+  
 
   #twitter-logo, #facebook-logo, #instagram-logo {
     height: 10%;
