--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -64,6 +64,8 @@ li {
     border-style: solid;
 }
 
+/*Main*/
+
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -74,6 +76,9 @@ li {
     padding: 20px;  
 }
 
+.grid p, .grid h2, .lokasjon, .booking label{
+    color: #c0392b;
+}
 
 .grid img {
     width: 70%;
@@ -92,13 +97,18 @@ li {
     margin-top: 50px; 
 }
 .info p{
-    text-align: justify;
+    text-align: center;
     width: 100%;
-    margin-left: 20%;
+    margin-left: 10%;
     font-size: 20px;
     font-weight: 500;
     margin-top: 10%;
     line-height: 1.8em;
+}
+
+.info h2{
+    margin-left: 10%;
+    text-align: center;
 }
 
 .lokasjon{
@@ -124,7 +134,7 @@ li {
     color: black;
     text-align: center;
     background-color: rgb(191, 172, 149);
-    background-image: linear-gradient(90deg, rgb(191, 172, 149) , rgb(230, 215, 198) );
+    
     border-radius: 4px;
 }
 
@@ -149,7 +159,7 @@ li {
     margin-bottom: 30px;
     border-radius: 4px;
     border: none;
-    background-color: rgb(238, 226, 212)
+    background-color: rgb(238, 226, 212);
 }
 
 footer {
@@ -269,7 +279,6 @@ and (max-width: 1100px) {
       display: block;   
       text-decoration: none;
       font-size: 18px;
-      font-family: Cambria;
       font-weight: 500;
       color: white;
       padding: 20px;
@@ -293,6 +302,9 @@ and (max-width: 1100px) {
         padding: 20px;  
     }
     
+    .grid p, .grid h2, .lokasjon, .booking label{
+        color: #c0392b;
+    }
     
     .bilde img {
         margin-top: 0;
@@ -370,7 +382,7 @@ and (max-width: 1100px) {
         margin-bottom: 30px;
         border-radius: 4px;
         border: none;
-        background-color:rgb(198, 214, 177);
+        background-color: rgb(238, 226, 212);
     }
     
     
@@ -391,6 +403,7 @@ and (max-width: 1100px) {
         height: 450px;
         text-align: center;
         align-items: center;
+        color: beige;
     }
       
     .Links{
@@ -406,7 +419,7 @@ and (max-width: 1100px) {
         }
       
     .Links a{
-        color: dodgerblue;
+        color: beige;
         font-weight: 700;
         text-decoration: none;
         padding-top: 40px;
@@ -419,6 +432,7 @@ and (max-width: 1100px) {
     #twitter-logo, #facebook-logo, #instagram-logo {
         height: 20px;
         margin-top: 40px;
+        color: beige;
     }
       
     #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
@@ -512,10 +526,13 @@ and (max-width: 700px) {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 11% 19% 25% 45%;
-        margin-top: 20px;
-        padding: 20px;  
+        margin-top: 10%;
+        padding: 10px;  
     }
     
+    .grid p, .grid h2, .lokasjon, .booking label{
+        color: #c0392b;
+    }
     
     .bilde img {
         margin-top: 0;
@@ -537,16 +554,20 @@ and (max-width: 700px) {
     }
     .info p{
         text-align: center;
-        width: 100%;
+        width: 90%;
         font-size: 15px;
         font-weight: 500;
         margin-top: 2%;
-        line-height: 1.5;
-        
+        line-height: 1.5;  
     }
+
+    .info h2{
+        text-align: center;
+    }
+
     
     .lokasjon{
-        margin-top: 0;
+        margin-top: 10px;
         text-align: center;
     }
     
@@ -560,11 +581,11 @@ and (max-width: 700px) {
     }
     
     .booking{
-        width: 60%;
+        width: 50%;
         display: block;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 50px;
+        margin-left: 15%;
+        margin-right: 15%;
+        padding: 30px;
         color: black;
         text-align: center;
         background-color: rgb(191, 172, 149);
@@ -594,12 +615,13 @@ and (max-width: 700px) {
         margin-bottom: 30px;
         border-radius: 4px;
         border: none;
-        background-color:rgb(198, 214, 177);
+        background-color: rgb(238, 226, 212);
     }
     
     
     footer {
-        margin-top: 300px;
+        margin-top: 10%;
+        height: 45%;
         background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
         border-style: solid;
         display: grid;
@@ -610,30 +632,33 @@ and (max-width: 700px) {
       
     .Footer-info {
         display: grid;
-        grid-template-columns: 23% 23% 58%;
-        column-gap: 2%;
-        height: 450px;
+        grid-template-columns: 1fr 2fr 2fr;
+        column-gap: 10px;
         text-align: center;
         align-items: center;
+        color: beige;
+    }
+
+    .Footer-info h2{
+        font-size: 18px;
     }
       
     .Links{
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-        width: 20px;
         row-gap: 20px;
-        margin-top: 10px;
-        line-height: 2em;
+        margin-top: 10%;
+        line-height: 2.6em;
         font-size: 18px;
-        padding-left: 20%;
         }
       
     .Links a{
-        color: dodgerblue;
+        color: beige;
         font-weight: 700;
         text-decoration: none;
         padding-top: 40px;
+        font-size: 20px;
     }
       
     .Links a:hover{
@@ -643,6 +668,7 @@ and (max-width: 700px) {
     #twitter-logo, #facebook-logo, #instagram-logo {
         height: 20px;
         margin-top: 40px;
+        color: beige;
     }
       
     #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
@@ -658,13 +684,13 @@ and (max-width: 700px) {
       
       
     #adresse-kart{
-        height: 50%;
-        width: 50%;
+        height: 40%;
+        width: 80%;
         margin-top: 20px;  
         border: none;
     }
       
     #adresse-kart:hover{
-        zoom: 1.2;
+        zoom: 1.1;
 }
 }
