--- a/Side3/CSS/Meny2.css
+++ b/Side3/CSS/Meny2.css
@@ -33,11 +33,45 @@ and (min-width: 1099px)
     top: 20%;
   }
 
+.navbar {
+    width: 100%;
+    line-height: 100px;
+    background-color:  #c0392b;
+    text-align: center;
+    display: inline-block;
+    align-items: center;
+  }
+
+li {
+    list-style: none;
+    display: inline-block;
+  }
+
+  
+  
+.navbar a{
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    color: beige;
+    padding: 20px;
+    letter-spacing: 4px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  
+.navbar a:hover, .dropbtn:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
+
+  
 .dropbtn {
     text-decoration: none;
     text-align: center;
     font-size: 18px;
-    font-family: Cambria;
     font-weight: 500;
     color: beige;
     background-color: #c0392b;
@@ -93,48 +127,14 @@ and (min-width: 1099px)
     background-color: #c0392b;
   }
 
-.navbar {
-    width: 100%;
-    line-height: 100px;
-    background-color:  #c0392b;
-    text-align: center;
-    display: inline-block;
-    align-items: center;
-  }
 
-li {
-    list-style: none;
-    display: inline-block;
-  }
-
-  
-  
-.navbar a{
-    text-decoration: none;
-    font-size: 18px;
-    font-family: Cambria;
-    font-weight: 500;
-    color: beige;
-    padding: 20px;
-    letter-spacing: 4px;
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-  
-.navbar a:hover, .dropbtn:hover{
-    background-color: white;
-    color: #130f40;
-    border-radius: 20px;
-    border-style: solid;
-  }
+/*Main*/
 
 .grid{
     display: grid;
     grid-template-rows: 4% 25% 25% 25% 18%;
     grid-template-columns: 30% 40% 30%;
-    position: relative;
-    
-    
+    position: relative;    
 }
 
 .grid p{
@@ -144,6 +144,7 @@ li {
     padding-bottom: 0px;
     font-size: 22px;
     height: auto;
+    color: black;
 }
 
 .grid strong{
@@ -162,7 +163,7 @@ li {
     padding-top: 10px;
     letter-spacing: 2px;
     padding-bottom: 10px;
-    color: black;
+    color:#c0392b;
     text-decoration: underline dotted darkgray;
 }
 
@@ -355,7 +356,6 @@ and (max-width: 1100px){
     text-decoration: none;
     text-align: center;
     font-size: 18px;
-    font-family: Cambria;
     font-weight: 500;
     color: white;
     background-color: #c0392b;
@@ -429,7 +429,6 @@ ul {
     display: block;
     text-decoration: none;
     font-size: 18px;
-    font-family: Cambria;
     font-weight: 500;
     color: white;
     padding: 20px;
@@ -451,8 +450,6 @@ ul {
     grid-template-columns: 38% 60%;
     column-gap: 2%;
     position: relative;
-    
-    
 }
 
 .grid p{
@@ -480,7 +477,7 @@ ul {
     padding-top: 10px;
     letter-spacing: 2px;
     padding-bottom: 10px;
-    color: black;
+    color:#c0392b;
     text-decoration: underline dotted darkgray;
 }
 
@@ -676,7 +673,6 @@ and (max-width: 500px){
     text-decoration: none;
     text-align: center;
     font-size: 18px;
-    font-family: Cambria;
     font-weight: 500;
     color: white;
     background-color: #c0392b;
@@ -750,7 +746,6 @@ ul {
     display: block;
     text-decoration: none;
     font-size: 16px;
-    font-family: Cambria;
     font-weight: 500;
     color: white;
     padding: 20px;
@@ -799,7 +794,7 @@ ul {
     padding-top: 10px;
     letter-spacing: 2px;
     padding-bottom: 5px;
-    color: black;
+    color:#c0392b;
     text-decoration: underline dotted darkgray;
 }
 
@@ -928,6 +923,7 @@ footer {
     grid-template-columns: 30% 65%;
     grid-template-rows: 1fr;
     column-gap: 5%;
+    color: beige;
 }
 
 .Links{
@@ -941,7 +937,7 @@ footer {
   }
   
 .Links a{
-    color: dodgerblue;
+    color: beige;
     font-weight: 700;
     text-decoration: none;
 }
