--- a/Side3/CSS/Åpningstider.css
+++ b/Side3/CSS/Åpningstider.css
@@ -1,110 +1,356 @@
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: white;
-}
+/* Stor Skjerm ------------------------------------------------------------------------------------------- */
 
-.navbar {
-  width: 100%;
-  line-height: 100px;
-  background-color: #c0392b;
-  text-align: center;
-  display: inline-block;
-  align-items: center;
-}
-
-li {
-  list-style: none;
-  display: inline-block;
-}
-
-.navbar a{
-  text-decoration: none;
-  font-size: 18px;
-  font-family: Cambria;
-  font-weight: 500;
-  color: beige;
-  padding: 20px;
-  letter-spacing: 4px;
-  margin: 28px 28px;
-}
-
-.navbar a:hover{
-  background-color: white;
-  color: #130f40;
-  border-radius: 20px;
-  border-style: solid;
-}
+@media screen and (min-width: 1001px) {
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: beige;
+  }
   
-.åpningstider {
-  font-family: Cambria;
-  font-weight: 200;
-  width: 50%;
-  height: 800px;
-  text-align: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-left: 25%;
-  margin-right: 25%;
-  background-color: white;
-  font-size: 40px;
-  line-height: 2;
-
+  .navbar {
+    width: 100%;
+    line-height: 100px;
+    background-color: #c0392b;
+    text-align: center;
+    display: inline-block;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .navbar a{
+    text-decoration: none;
+    font-size: 18px;
+    font-family: Cambria;
+    font-weight: 500;
+    color: beige;
+    padding: 20px;
+    letter-spacing: 4px;
+    margin: 28px 28px;
+  }
+  
+  .navbar a:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
+    
+  .åpningstider {
+    font-family: Cambria;
+    font-weight: 200;
+    width: 50%;
+    height: 800px;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 25%;
+    margin-right: 25%;
+    background-color: white;
+    font-size: 40px;
+    line-height: 2;
+  
+  }
+  
+  .åpningstider h2{
+    text-decoration: underline;
+    text-align: center;
+  }
+  
+  footer {
+    margin-top: 100px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+  
+  .Links{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    margin-top: 6%;
+    margin-left: 12%;
+    line-height: 2em;
+    font-size: 35px;
+  }
+  
+  .Links a{
+    color: beige;
+    font-weight: 700;
+    text-decoration: none;
+  }
+  
+  .Links a:hover{
+    zoom: 1.2;
+  }
+  
+  footer p {
+    margin-top: 6%;
+    margin-right: 5%;
+    text-align: justify; 
+    font-size: 24px;
+    line-height: 2.8em;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    color: beige;
+  }
+  
+  footer p a{
+    color: beige;
+    text-decoration: none;
+  }
+  
+  footer p a:hover{
+    zoom: 1.4;
+  }
+  
 }
 
-.åpningstider h2{
-  text-decoration: underline;
-  text-align: center;
+/* Middels Skjerm ------------------------------------------------------------------------------------------- */
+
+@media screen and (max-width: 1000px) {
+  
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: beige;
+  }
+  
+  .navbar {
+    width: 100%;
+    line-height: 80px;
+    background-color: #c0392b;
+    text-align: center;
+    display: inline-block;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .navbar a{
+    text-decoration: none;
+    font-size: 12px;
+    font-family: Cambria;
+    font-weight: 300;
+    color: beige;
+    padding: 8px;
+    letter-spacing: 4px;
+    margin: 14px 14px;
+  }
+  
+  .navbar a:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
+    
+  .åpningstider {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 200;
+    width: 35%;
+    height: 800px;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 30%;
+    padding: 50px;
+    background-color: wheat;
+    font-size: 20px;
+    line-height: 2;
+  
+  }
+  
+  .åpningstider h2{
+    text-align: center;
+  }
+  
+  footer {
+    margin-top: 100px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 20px;
+    align-items: baseline;
+  }
+  
+  .Links{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    margin-top: 6%;
+    margin-left: 12%;
+    line-height: 4.3em;
+    font-size: 20px;
+  }
+  
+  .Links a{
+    color: beige;
+    font-weight: 700;
+    text-decoration: none;
+  }
+  
+  .Links a:hover{
+    zoom: 1.2;
+  }
+  
+  footer p {
+    margin-top: 6%;
+    margin-right: 5%;
+    text-align: justify; 
+    font-size: 20px;
+    line-height: 2.8em;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    color: beige;
+  }
+  
+  footer p a{
+    color: beige;
+    text-decoration: none;
+  }
+  
+  footer p a:hover{
+    zoom: 1.4;
+  }
 }
 
-footer {
-  margin-top: 100px;
-  background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
-  border-style: solid;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-}
+/* Liten Skjerm ------------------------------------------------------------------------------------------- */
 
-.Links{
-  display: grid;
-  grid-column-start: 1;
-  grid-column-end: 1;
-  margin-top: 6%;
-  margin-left: 12%;
-  line-height: 2em;
-  font-size: 35px;
-}
+@media screen and (max-width: 420px) {
+  body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: beige;
+  }
+  
+  .navbar {
+    width: 100%;
+    line-height: 80px;
+    background-color: #c0392b;
+    text-align: center;
+    display: block;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: block;
+  }
+  
+  .navbar a{
+    text-decoration: none;
+    font-size: 8px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+    color: beige;
+    letter-spacing: 2px;
+    margin: 2px 2px;
+  }
+  
+  .navbar a:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
 
-.Links a{
-  color: beige;
-  font-weight: 700;
-  text-decoration: none;
-}
+  .åpningstider{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 8fr;
+    row-gap: 20px;
+  }
+    
+  .åpningstider h2{
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    text-align: center;
+    font-size: 20px;
+  }
 
-.Links a:hover{
-  zoom: 1.2;
-}
+  .åpningstider p{
+    grid-row-start: 2;
+    grid-row-end: 2;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 200;
+    width: 100%;
+    height: 300px;
+    padding: 0;
+    font-size: 16px;
+    line-height: 2;
+    text-align: center;
+  
+  }
+  
 
-footer p {
-  margin-top: 6%;
-  margin-right: 5%;
-  text-align: justify; 
-  font-size: 24px;
-  line-height: 2.8em;
-  grid-column-start: 2;
-  grid-column-end: 2;
-  color: beige;
-}
-
-footer p a{
-  color: beige;
-  text-decoration: none;
-}
-
-footer p a:hover{
-  zoom: 1.4;
+  
+  footer {
+    margin-top: 100px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 15px;
+    align-items: baseline;
+  }
+  
+  .Links{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    margin-top: 6%;
+    margin-left: 12%;
+    line-height: 4.3em;
+    font-size: 18px;
+  }
+  
+  .Links a{
+    color: beige;
+    font-weight: 700;
+    text-decoration: none;
+  }
+  
+  .Links a:hover{
+    zoom: 1.2;
+  }
+  
+  footer p {
+    margin-top: 6%;
+    margin-right: 10%;
+    text-align: justify; 
+    font-size: 14px;
+    line-height: 2.8em;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    color: beige;
+  }
+  
+  footer p a{
+    color: beige;
+    text-decoration: none;
+  }
+  
+  footer p a:hover{
+    zoom: 1.4;
+  }
 }
 
 
