--- a/Side4/CSS/fil.css
+++ b/Side4/CSS/fil.css
@@ -1,3 +1,5 @@
+/* Stor Skjerm ------------------------------------------------------------------------------------------- */
+
 @media screen and  (min-width: 1001px){
 body {
   height: 100%;
@@ -5,9 +7,8 @@ body {
   background-image: linear-gradient(rgb(194, 225, 255), rgb(255, 244, 182));
 }
 
-
 .Header-Image{
- background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/giphy.gif);
+ background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/technology.png);
  height: 400px;
  width: 100%;
  background-position: center;
@@ -202,17 +203,19 @@ footer{
 }
 }
 
+/* Middels Skjerm ------------------------------------------------------------------------------------------- */
+
 @media screen and (max-width: 1000px)
 {
   body {
     height: 100%;
     margin: 0;
-    background-image: linear-gradient(red,green,blue,white);
+    background-image: linear-gradient(rgb(194, 225, 255), rgb(255, 244, 182));
   }
   
   
   .Header-Image{
-   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/giphy.gif);
+   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/technology.png);
    height: 50vh;
    width: 100%;
    background-position: center;
@@ -232,7 +235,7 @@ footer{
     font-size: 16px;
     letter-spacing: 5px;
     text-shadow: 5px 5px 10px black;
-    top: 80%;
+    top: 75%;
   }
   
   .Main-Title:hover{
@@ -402,16 +405,18 @@ footer{
   }
 }
 
+/* Liten Skjerm ------------------------------------------------------------------------------------------- */
+
 @media (max-width: 420px){
   body {
     height: 100%;
     margin: 0;
-    background-image: linear-gradient(red,green,blue,white);
+    background-image: linear-gradient(rgb(194, 225, 255), rgb(255, 244, 182));
   }
   
   
   .Header-Image{
-   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/giphy.gif);
+   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/technology.png);
    height: 20vh;
    width: 100%;
    background-position: center;
