--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     height: 100%;
-    width: 100%;
     background-color: beige;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -466,9 +465,11 @@ and (max-width: 1100px) {
 @media screen 
 and (max-width: 700px) {
 
+
+
     .Header-Image {
         background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
-        height: 50vh;
+        height: 30vh;
         width: 100%;
         background-repeat: no-repeat;
         background-size: cover;
@@ -524,7 +525,7 @@ and (max-width: 700px) {
     
     .grid {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
         grid-template-rows: 11% 19% 25% 45%;
         margin-top: 10%;
         padding: 10px;  
@@ -538,7 +539,7 @@ and (max-width: 700px) {
         margin-top: 0;
         height: 90%;
         display: block;
-        margin-left: auto;
+        margin-left: 20%;
         margin-right: auto;
         padding: 2%;
         background-color: rgb(191, 172, 149);
@@ -547,7 +548,7 @@ and (max-width: 700px) {
     }
     
     .info{
-        margin-top: 0;
+        margin-top: 10%;
         text-align: center;
         width: 100%;
        
@@ -555,6 +556,7 @@ and (max-width: 700px) {
     .info p{
         text-align: center;
         width: 90%;
+        margin-left: 5%;
         font-size: 15px;
         font-weight: 500;
         margin-top: 2%;
@@ -567,7 +569,9 @@ and (max-width: 700px) {
 
     
     .lokasjon{
-        margin-top: 10px;
+        margin-top: 25%;
+        width: 80%;
+        margin-left: 5%;
         text-align: center;
     }
     
@@ -581,10 +585,9 @@ and (max-width: 700px) {
     }
     
     .booking{
-        width: 50%;
+        width: 70%;
         display: block;
-        margin-left: 15%;
-        margin-right: 15%;
+        margin-left: 7%;
         padding: 30px;
         color: black;
         text-align: center;
@@ -592,6 +595,11 @@ and (max-width: 700px) {
         background-image: linear-gradient(90deg, rgb(191, 172, 149) , rgb(230, 215, 198) );
         border-radius: 4px;
         
+    }
+
+    .booking h2{
+        margin-bottom: 40px;
+        font-size: 32px;
     }
     
     .booking form{
@@ -621,7 +629,7 @@ and (max-width: 700px) {
     
     footer {
         margin-top: 10%;
-        height: 45%;
+        height: 50%;
         background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
         border-style: solid;
         display: grid;
@@ -635,7 +643,7 @@ and (max-width: 700px) {
         grid-template-columns: 1fr 2fr 2fr;
         column-gap: 10px;
         text-align: center;
-        align-items: center;
+        align-items: baseline;
         color: beige;
     }
 
@@ -648,7 +656,6 @@ and (max-width: 700px) {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         row-gap: 20px;
-        margin-top: 10%;
         line-height: 2.6em;
         font-size: 18px;
         }
@@ -657,18 +664,28 @@ and (max-width: 700px) {
         color: beige;
         font-weight: 700;
         text-decoration: none;
-        padding-top: 40px;
-        font-size: 20px;
+        padding-top: 10px;
+        font-size: 12px;
     }
       
     .Links a:hover{
         zoom: 1.2;
     }
-      
+     
+    .Socials{
+        color: beige;
+      }
+    
+      .Socials h2{
+        font-size: 12px;
+        text-decoration: underline;
+      }
+
     #twitter-logo, #facebook-logo, #instagram-logo {
         height: 20px;
-        margin-top: 40px;
+        margin-top: 10px;
         color: beige;
+        font-size: 12px;
     }
       
     #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
@@ -676,15 +693,21 @@ and (max-width: 700px) {
     }
       
       
-    .footer-area-3{
-        width: 100px;
-        margin-right: 20%;
-    }
+    .kart{
+        height: 90%;
+        color: beige;
+        line-height: 1.1em;
+        font-size: 12px;
+      }
+    
+      .kart h2{
+        font-size: 12px;
+      }
       
       
       
     #adresse-kart{
-        height: 40%;
+        height: 28%;
         width: 80%;
         margin-top: 20px;  
         border: none;
