--- a/Side3/CSS/Åpningstider.css
+++ b/Side3/CSS/Åpningstider.css
@@ -50,14 +50,12 @@
     margin-bottom: 100px;
     margin-left: 25%;
     margin-right: 25%;
-    background-color: white;
+    background-color: wheat;
     font-size: 40px;
     line-height: 2;
-  
   }
   
   .åpningstider h2{
-    text-decoration: underline;
     text-align: center;
   }
   
@@ -270,37 +268,42 @@
 
   .åpningstider{
     display: grid;
-    width: 100%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 8fr;
-    row-gap: 20px;
+    width: 50%;
+    margin-left: 12%;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 150px 340px;
+    row-gap: 10px;
+    background-color: wheat;
+    height: 500px;
   }
     
   .åpningstider h2{
     grid-column-start: 1;
-    grid-column-end: 1;
+    grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 1;
     text-align: center;
     font-size: 20px;
+    margin-left: 15%;
   }
 
   .åpningstider p{
+    grid-column-start: 1;
+    grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 2;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 200;
-    width: 100%;
-    height: 300px;
+    width: 120%;
+    height: 100px;
     padding: 0;
-    font-size: 16px;
+    margin-left: 15%;
+    font-size: 14px;
     line-height: 2;
     text-align: center;
   
   }
-  
 
-  
   footer {
     margin-top: 100px;
     background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
