--- a/Side3/CSS/Meny2.css
+++ b/Side3/CSS/Meny2.css
@@ -290,6 +290,7 @@ footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+    color: beige;
 }
 
 .Links{
@@ -303,7 +304,7 @@ footer {
   }
   
 .Links a{
-    color: dodgerblue;
+    color: beige;
     font-weight: 700;
     text-decoration: none;
 }
@@ -430,7 +431,7 @@ ul {
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
-    color: white;
+    color: beige;
     padding: 20px;
     letter-spacing: 4px;
     margin-left: 30px;
@@ -605,6 +606,7 @@ footer {
     display: grid;
     grid-template-columns: 40% 60%;
     grid-template-rows: 1fr;
+    color: beige;
 }
 
 .Links{
@@ -618,7 +620,7 @@ footer {
   }
   
 .Links a{
-    color: dodgerblue;
+    color: beige;
     font-weight: 700;
     text-decoration: none;
 }
@@ -674,7 +676,7 @@ and (max-width: 500px){
     text-align: center;
     font-size: 18px;
     font-weight: 500;
-    color: white;
+    color: beige;
     background-color: #c0392b;
     border: none;
     padding: 20px;
@@ -747,7 +749,7 @@ ul {
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
-    color: white;
+    color: beige;
     padding: 20px;
     letter-spacing: 4px;
     margin-left: 30px;
@@ -765,7 +767,6 @@ ul {
     display: grid;
     grid-template-rows: 5% 30% 25% 25% 18%;
     grid-template-columns: 35% 64%;
-    column-gap: 1%;
     position: relative; 
 }
 
@@ -933,7 +934,7 @@ footer {
     margin-top: 6%;
     margin-left: 12%;
     line-height: 2em;
-    font-size: 20px;
+    font-size: 18px;
   }
   
 .Links a{
