--- a/Side1/CSS/fil.css
+++ b/Side1/CSS/fil.css
@@ -128,7 +128,7 @@
     width: 100%;
   }
   
-  .test2 {
+  .utsikt {
     height: 250px;
     width: 250px;
     margin-left: 22%;
@@ -432,7 +432,7 @@
   }
   
   
-  .test2 {
+  .utsikt {
     height: 180px;
     width: 50%;
     margin-left: 25%; 
@@ -742,7 +742,7 @@
   }
   
   
-  .test2 {
+  .utsikt {
     height: 180px;
     width: 50%;
     margin-left: 25%; 
