--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -634,6 +634,7 @@ and (max-width: 700px) {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
+        color: beige;
     }
       
       
