--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -359,6 +359,11 @@ and (max-width: 1100px) {
         border-radius: 4px;
         
     }
+
+    .booking h2{
+        font-size: 32px;
+        margin-bottom: 10%;
+    }
     
     .booking form{
        background-color: white;
@@ -386,7 +391,7 @@ and (max-width: 1100px) {
     
     
     footer {
-        margin-top: 300px;
+        margin-top: 200px;
         background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
         border-style: solid;
         display: grid;
@@ -632,8 +637,8 @@ and (max-width: 700px) {
         background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
         border-style: solid;
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
+        grid-template-columns: 100%;
+        grid-template-rows: 100%;
     }
       
       
@@ -673,12 +678,12 @@ and (max-width: 700px) {
      
     .Socials{
         color: beige;
-      }
+    }
     
-      .Socials h2{
+    .Socials h2{
         font-size: 12px;
         text-decoration: underline;
-      }
+    }
 
     #twitter-logo, #facebook-logo, #instagram-logo {
         height: 20px;
@@ -714,4 +719,4 @@ and (max-width: 700px) {
     #adresse-kart:hover{
         zoom: 1.1;
 }
-}
+}   
