--- a/Side3/CSS/Meny2.css
+++ b/Side3/CSS/Meny2.css
@@ -915,6 +915,7 @@ ul {
 }
 
 footer {
+    height: 350px;
     margin-top: 100px;
     background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
     border-style: solid;
@@ -930,7 +931,7 @@ footer {
     grid-column-start: 1;
     grid-column-end: 1;
     margin-top: 6%;
-    margin-left: 12%;
+    margin-left: 5%;
     line-height: 2em;
     font-size: 18px;
   }
@@ -946,12 +947,17 @@ footer {
   }
 
 footer p {
-    margin-top: 6%;
-    margin-right: 20px;
+    margin-top: 10%;
+    margin-right: 1%;
     text-align: center; 
     font-size: 14px;
     line-height: 2.8em;
     grid-column-start: 2;
     grid-column-end: 2;
 }
+
+footer p a{
+    color: beige;
+}
+
 }
