--- a/Side3/CSS/Åpningstider.css
+++ b/Side3/CSS/Åpningstider.css
@@ -305,11 +305,12 @@
   }
 
   footer {
-    margin-top: 100px;
+    margin-top: 50px;
+    height: 220px;
     background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
     border-style: solid;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr;
     column-gap: 15px;
     align-items: baseline;
@@ -319,9 +320,8 @@
     display: grid;
     grid-column-start: 1;
     grid-column-end: 1;
-    margin-top: 6%;
-    margin-left: 12%;
-    line-height: 4.3em;
+    margin-left: 10%;
+    line-height: 2.3em;
     font-size: 18px;
   }
   
@@ -336,11 +336,10 @@
   }
   
   footer p {
-    margin-top: 6%;
-    margin-right: 10%;
     text-align: justify; 
-    font-size: 14px;
+    font-size: 10px;
     line-height: 2.8em;
+    margin-left: 5%;
     grid-column-start: 2;
     grid-column-end: 2;
     color: beige;
@@ -348,12 +347,9 @@
   
   footer p a{
     color: beige;
-    text-decoration: none;
+    text-decoration: underline;
   }
   
-  footer p a:hover{
-    zoom: 1.4;
-  }
 }
 
 
