--- a/Side5/CSS/fil.css
+++ b/Side5/CSS/fil.css
@@ -45,7 +45,7 @@ li {
   font-size: 18px;
   font-family: Cambria;
   font-weight: 500;
-  color: white;
+  color: beige;
   padding: 20px;
   letter-spacing: 4px;
   margin-left: 30px;
