--- a/Side5/CSS/fil.css
+++ b/Side5/CSS/fil.css
@@ -300,6 +300,7 @@
   
   .Tekst{
     width: 100%;
+    line-height: 2em;
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 1;
