--- a/Side5/CSS/fil.css
+++ b/Side5/CSS/fil.css
@@ -92,6 +92,10 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 100;
   }
+
+  .Tekst a{
+    color: #c0392b;
+  }
   
   .Tekst h2{
     text-align: center;
