--- a/Side5/CSS/fil.css
+++ b/Side5/CSS/fil.css
@@ -290,7 +290,7 @@
   .Innhold{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 750px 750px;
   }
   
   .Før_test{
